# ProtocolDispatcher

./: CMakeLists.txt  README.md
docs/: architecture.md  dispatch-flow.md  fix-notes.md  http-client-design.md  http-design.md  websocket-client-design.md  websocket-design.md
examples/: http_client_demo.cpp
include/ProtocolDispatcher/common/: Config.hpp  Metadata.hpp  Types.hpp
include/ProtocolDispatcher/core/: DispatchRequest.hpp  DispatchResult.hpp  Dispatcher.hpp  Error.hpp  HandlerRegistry.hpp  IProtocolHandler.hpp  Status.hpp
include/ProtocolDispatcher/net/: Buffer.hpp  Endpoint.hpp  Resolver.hpp  Socket.hpp  TcpClient.hpp
include/ProtocolDispatcher/protocols/fix/: README.md
include/ProtocolDispatcher/protocols/http/: HttpClient.hpp  HttpHandler.hpp  HttpParser.hpp  HttpRequest.hpp  HttpRequestData.hpp  HttpResponse.hpp  HttpResponseData.hpp  HttpSerializer.hpp  HttpValidator.hpp
include/ProtocolDispatcher/protocols/websocket/: WebSocketHandler.hpp  WebSocketMessage.hpp  WebSocketSession.hpp  WebSocketValidator.hpp
include/ProtocolDispatcher/transport/: BeastHttpAdapter.hpp  BeastWebSocketAdapter.hpp
scripts/: run_tests.sh
src/common/: Config.cpp  Error.cpp
src/core/: Dispatcher.cpp  HandlerRegistry.cpp
src/net/: Resolver.cpp  Socket.cpp  TcpClient.cpp
src/protocols/http/: HttpClient.cpp  HttpHandler.cpp  HttpParser.cpp  HttpSerializer.cpp  HttpValidator.cpp
src/protocols/websocket/: WebSocketHandler.cpp  WebSocketSession.cpp  WebSocketValidator.cpp
src/transport/: BeastHttpAdapter.cpp  BeastWebSocketAdapter.cpp
tests/core/: DispatcherTests.cpp  HandlerRegistryTests.cpp
tests/http/: HttpClientTests.cpp  HttpHandlerTests.cpp  HttpValidatorTests.cpp
tests/integration/: HttpClientFlowTests.cpp  HttpDispatchFlowTests.cpp  WebSocketDispatchFlowTests.cpp
tests/websocket/: WebSocketHandlerTests.cpp  WebSocketSessionTests.cpp  WebSocketValidatorTests.cpp
